# caltime

./: .gitignore
backend/: CHANGELOG.md  caltime.cabal  hie.yaml
backend/app/: Main.hs
backend/src/: Caltime.hs  Lib.hs
backend/src/Caltime/: Parser.hs
backend/src/Caltime/Parser/: Internal.hs
backend/src/Caltime/Parser/Internal/: Model.hs
backend/test/: Spec.hs
